[package]
name = "ccl"
version = "3.5.3"
authors = ["acrimon <joel.wejdenstal@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://gitlab.nebulanet.cc/xacrimon/ccl"
homepage = "https://gitlab.nebulanet.cc/xacrimon/ccl"
description = "Fast datastructures for use in highly concurrent systems."
readme = "README.md"
documentation = "https://docs.rs/ccl"
keywords = ["atomic", "concurrent", "map", "parallel", "hashmap"]
categories = ["concurrency", "algorithms", "data-structures"]

[features]
nightly = ["parking_lot/nightly", "hashbrown/nightly"]

[dependencies]
ccl-fxhash = { version = "3.0.0", features = ["std"] }
hashbrown = "0.5.0"
parking_lot = "0.8.0"
rand = "0.6.5"
num_cpus = "1.10.1"
crossbeam-epoch = "0.7.1"
seahash = "3.0.6"
owning_ref = { path = "lib/owning-ref-rs" }

[dev-dependencies]
rayon = "1.1.0"
