[package]
name = "ccl"
version = "4.8.1"
authors = ["acrimon <joel.wejdenstal@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://gitlab.nebulanet.cc/xacrimon/ccl"
homepage = "https://gitlab.nebulanet.cc/xacrimon/ccl"
description = "Fast datastructures for use in highly concurrent systems."
readme = "README.md"
documentation = "https://docs.rs/ccl"
keywords = ["atomic", "concurrent", "map", "parallel", "hashmap"]
categories = ["concurrency", "algorithms", "data-structures"]

[features]
nightly = ["parking_lot/nightly", "hashbrown/nightly", "ccl-crossbeam-epoch/nightly"]

[dependencies]
hashbrown = "0.5.0"
parking_lot = "0.8.0"
rand = "0.7.0"
num_cpus = "1.10.1"
ccl-crossbeam-epoch = { path = "lib/ccl-crossbeam-epoch", version = "0.7.1" }
seahash = "3.0.6"
ccl_owning_ref = "0.4.1"

[dev-dependencies]
rayon = "1.1.0"
