[package]
name = "ccl_owning_ref"
version = "0.4.2"
authors = ["Marvin Löbel <loebel.marvin@gmail.com>"]
license = "MIT"

description = "A library for creating references that carry their owner with them."
readme = "README.md"
documentation = "http://kimundi.github.io/owning-ref-rs/owning_ref/index.html"

repository = "https://gitlab.nebulanet.cc/xacrimon/ccl"
keywords = ["reference", "sibling", "field", "owning"]

[dependencies]
ccl_stable_deref_trait = "1.0.2"
